# apertium-san

./: .gitattributes  AUTHORS  Makefile.am  README  apertium-sa-XX.ucs-wx.xml  configure.ac  modes.xml
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
